<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/material_grey_700"
    android:layout_height="match_parent"
    tools:context="com.chatt.Login">

    <LinearLayout
        android:fadingEdge="horizontal"
        android:fadingEdgeLength="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp">

        <ImageView

            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:scaleType="center"
            android:src="@drawable/icon" />

        <com.spentas.javad.securechat.font.RobotoTextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-15dp"
            android:text="@string/app_name"
            android:textColor="#00B763"
            android:textSize="20sp"
            android:textStyle="bold" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/login_username_txt"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableLeft="@drawable/ic_username"
                android:hint="@string/username"
                android:maxLines="1"
                android:singleLine="true">

            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_5dp">

            <EditText
                android:id="@+id/login_password_txt"
                style="@style/editext_graybg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad_20dp"
                android:drawableLeft="@drawable/ic_pwd"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"></EditText>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_marginTop="@dimen/pad_30dp"
            android:id="@+id/btnLogin"
            style="@style/btn_white_large"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnReg"
            style="@style/btn_white_large"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/register" />
        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>
    </LinearLayout>

</ScrollView>